feat(build): add filter and sort functionality for components in build process